--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ ascii = "0.7.0"
 byteorder = "1.1.0"
 either = "1"
 unreachable = "1.0.0"
-regex = { version = "0.2.0", optional = true }
+regex = { version = ">=0.2.0, <=1", optional = true }
 memchr = { version = "2", default-features = false }
 
 [dev-dependencies]
